--- a/public/css/style.css
+++ b/public/css/style.css
@@ -215,7 +215,7 @@ hr {
 h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
   margin-top: 0;
   margin-bottom: 0.5rem;
-  font-weight: 700;
+  font-weight: 1000;
   line-height: 1.6;
   color: var(--bs-heading-color);
 }
@@ -2882,8 +2882,8 @@ textarea.form-control-lg {
   --bs-btn-padding-x: 0.75rem;
   --bs-btn-padding-y: 0.375rem;
   --bs-btn-font-family: ;
-  --bs-btn-font-size: 1rem;
-  --bs-btn-font-weight: 400;
+  --bs-btn-font-size: 1.5rem;
+  --bs-btn-font-weight: 1000;
   --bs-btn-line-height: 1.6;
   --bs-btn-color: var(--bs-body-color);
   --bs-btn-bg: transparent;
@@ -63937,6 +63937,7 @@ hr {
   margin: 0px !important;
 }
 .header.landing .brand-logo img {
+  max-width: 50%;
   filter: none;
   margin-right: 10px;
 }
@@ -63985,8 +63986,8 @@ hr {
   }
 }
 .navigation .navbar ul > li > a {
-  font-size: 15px;
-  font-weight: 700;
+  font-size: 25px;
+  font-weight: 1000;
   color: #fff !important;
 }
 @media only screen and (max-width: 991px) {
