--- a/public/scss/layout/_header.scss
+++ b/public/scss/layout/_header.scss
@@ -69,6 +69,7 @@
 			margin: 0px !important;
 
 			img {
+				max-width: 50%;
 				filter: none;
 				margin-right: 10px;
 			}
@@ -136,7 +137,7 @@
 				}
 
 				& > a {
-					font-size: 15px;
+					font-size: 25px;
 					font-weight: $headings-font-weight;
 					color: $white !important;
 
