--- a/public/globals.css
+++ b/public/globals.css
@@ -1,8 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;900&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-
+* {
+  font-family: 'Poppins', sans-serif;
+}
 .hero {
   height: 100vh;
   background: url(../public/images/HeartsofTheNileHero.png);
