--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4078,7 +4078,7 @@ textarea.form-control-lg {
 @media (min-width: 992px) {
   .navbar-expand-lg {
     flex-wrap: nowrap;
-    justify-content: flex-start;
+    justify-content: space-around;
   }
   .navbar-expand-lg .navbar-nav {
     flex-direction: row;
